net.certiv.fluent.dt.core/src/main/java/net/certiv/fluent/dt/core/lang/scss/gen/ScssParser.java
// Generated from D:/DevFiles/Eclipse/Tools/Editors/net.certiv.fluent.dt/net.certiv.fluent.dt.core/src/main/java/net/certiv/fluent/dt/core/lang/scss/ScssParser.g4 by ANTLR 4.8

	package net.certiv.fluent.dt.core.lang.scss.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScssParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER=1, UNIT=2, NULL=3, FROM=4, THROUGH=5, IN=6, MIXIN=7, FUNCTION=8, 
		AT_ELSE=9, IF=10, AT_IF=11, AT_FOR=12, AT_WHILE=13, AT_EACH=14, INCLUDE=15, 
		IMPORT=16, RETURN=17, DEFAULT=18, INTERPOLATION_START=19, URL_BEG=20, 
		STRING=21, COLOR=22, IDENTIFIER=23, LPAREN=24, RPAREN=25, LBRACE=26, RBRACE=27, 
		LBRACK=28, RBRACK=29, GT=30, TIL=31, ELLIPSIS=32, LT=33, COLON=34, SEMI=35, 
		COMMA=36, DOT=37, DOLLAR=38, AT=39, AND=40, HASH=41, PLUS=42, TIMES=43, 
		DIV=44, MINUS=45, PERC=46, EQ=47, PIPE_EQ=48, TILD_EQ=49, EQIV=50, NOTEQ=51, 
		COMBINE_COMPARE=52, COLONCOLON=53, WS=54, LINE_COMMENT=55, BLOCK_COMMENT=56, 
		URL_END=57, URL=58, WS_ID=59, InterpolationStartAfter=60, IdentifierAfter=61;
	public static final int
		RULE_stylesheet = 0, RULE_statement = 1, RULE_params = 2, RULE_param = 3, 
		RULE_variableName = 4, RULE_paramOptionalValue = 5, RULE_mixinDeclaration = 6, 
		RULE_includeDeclaration = 7, RULE_functionDeclaration = 8, RULE_functionBody = 9, 
		RULE_functionReturn = 10, RULE_functionStatement = 11, RULE_commandStatement = 12, 
		RULE_mathCharacter = 13, RULE_mathStatement = 14, RULE_expression = 15, 
		RULE_ifDeclaration = 16, RULE_elseIfStatement = 17, RULE_elseStatement = 18, 
		RULE_conditions = 19, RULE_condition = 20, RULE_variableDeclaration = 21, 
		RULE_forDeclaration = 22, RULE_whileDeclaration = 23, RULE_eachDeclaration = 24, 
		RULE_eachValueList = 25, RULE_identifierListOrMap = 26, RULE_identifierValue = 27, 
		RULE_importDeclaration = 28, RULE_referenceUrl = 29, RULE_mediaTypes = 30, 
		RULE_nested = 31, RULE_nest = 32, RULE_ruleset = 33, RULE_block = 34, 
		RULE_selectors = 35, RULE_selector = 36, RULE_selectorPrefix = 37, RULE_element = 38, 
		RULE_pseudo = 39, RULE_attrib = 40, RULE_attribRelate = 41, RULE_identifier = 42, 
		RULE_identifierPart = 43, RULE_identifierVariableName = 44, RULE_property = 45, 
		RULE_values = 46, RULE_url = 47, RULE_measurement = 48, RULE_functionCall = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"stylesheet", "statement", "params", "param", "variableName", "paramOptionalValue", 
			"mixinDeclaration", "includeDeclaration", "functionDeclaration", "functionBody", 
			"functionReturn", "functionStatement", "commandStatement", "mathCharacter", 
			"mathStatement", "expression", "ifDeclaration", "elseIfStatement", "elseStatement", 
			"conditions", "condition", "variableDeclaration", "forDeclaration", "whileDeclaration", 
			"eachDeclaration", "eachValueList", "identifierListOrMap", "identifierValue", 
			"importDeclaration", "referenceUrl", "mediaTypes", "nested", "nest", 
			"ruleset", "block", "selectors", "selector", "selectorPrefix", "element", 
			"pseudo", "attrib", "attribRelate", "identifier", "identifierPart", "identifierVariableName", 
			"property", "values", "url", "measurement", "functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMBER", "UNIT", "NULL", "FROM", "THROUGH", "IN", "MIXIN", "FUNCTION", 
			"AT_ELSE", "IF", "AT_IF", "AT_FOR", "AT_WHILE", "AT_EACH", "INCLUDE", 
			"IMPORT", "RETURN", "DEFAULT", "INTERPOLATION_START", "URL_BEG", "STRING", 
			"COLOR", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "GT", "TIL", "ELLIPSIS", "LT", "COLON", "SEMI", "COMMA", "DOT", 
			"DOLLAR", "AT", "AND", "HASH", "PLUS", "TIMES", "DIV", "MINUS", "PERC", 
			"EQ", "PIPE_EQ", "TILD_EQ", "EQIV", "NOTEQ", "COMBINE_COMPARE", "COLONCOLON", 
			"WS", "LINE_COMMENT", "BLOCK_COMMENT", "URL_END", "URL", "WS_ID", "InterpolationStartAfter", 
			"IdentifierAfter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScssParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScssParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StylesheetContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScssParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitStylesheet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitStylesheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MIXIN) | (1L << FUNCTION) | (1L << AT_IF) | (1L << AT_FOR) | (1L << AT_WHILE) | (1L << AT_EACH) | (1L << INCLUDE) | (1L << IMPORT) | (1L << INTERPOLATION_START) | (1L << IDENTIFIER) | (1L << DOT) | (1L << DOLLAR) | (1L << AT) | (1L << AND) | (1L << HASH) | (1L << TIMES))) != 0)) {
				{
				{
				setState(100);
				statement();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ImportDeclarationContext importDeclaration() {
			return getRuleContext(ImportDeclarationContext.class,0);
		}
		public NestedContext nested() {
			return getRuleContext(NestedContext.class,0);
		}
		public RulesetContext ruleset() {
			return getRuleContext(RulesetContext.class,0);
		}
		public MixinDeclarationContext mixinDeclaration() {
			return getRuleContext(MixinDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public IncludeDeclarationContext includeDeclaration() {
			return getRuleContext(IncludeDeclarationContext.class,0);
		}
		public IfDeclarationContext ifDeclaration() {
			return getRuleContext(IfDeclarationContext.class,0);
		}
		public ForDeclarationContext forDeclaration() {
			return getRuleContext(ForDeclarationContext.class,0);
		}
		public WhileDeclarationContext whileDeclaration() {
			return getRuleContext(WhileDeclarationContext.class,0);
		}
		public EachDeclarationContext eachDeclaration() {
			return getRuleContext(EachDeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				importDeclaration();
				}
				break;
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				nested();
				}
				break;
			case INTERPOLATION_START:
			case IDENTIFIER:
			case DOT:
			case AND:
			case HASH:
			case TIMES:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				ruleset();
				}
				break;
			case MIXIN:
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				mixinDeclaration();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				functionDeclaration();
				}
				break;
			case DOLLAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				variableDeclaration();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 7);
				{
				setState(114);
				includeDeclaration();
				}
				break;
			case AT_IF:
				enterOuterAlt(_localctx, 8);
				{
				setState(115);
				ifDeclaration();
				}
				break;
			case AT_FOR:
				enterOuterAlt(_localctx, 9);
				{
				setState(116);
				forDeclaration();
				}
				break;
			case AT_WHILE:
				enterOuterAlt(_localctx, 10);
				{
				setState(117);
				whileDeclaration();
				}
				break;
			case AT_EACH:
				enterOuterAlt(_localctx, 11);
				{
				setState(118);
				eachDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScssParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScssParser.COMMA, i);
		}
		public TerminalNode ELLIPSIS() { return getToken(ScssParser.ELLIPSIS, 0); }
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			param();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(122);
				match(COMMA);
				setState(123);
				param();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELLIPSIS) {
				{
				setState(129);
				match(ELLIPSIS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public ParamOptionalValueContext paramOptionalValue() {
			return getRuleContext(ParamOptionalValueContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			variableName();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(133);
				paramOptionalValue();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNameContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(ScssParser.DOLLAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScssParser.IDENTIFIER, 0); }
		public VariableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterVariableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitVariableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitVariableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableNameContext variableName() throws RecognitionException {
		VariableNameContext _localctx = new VariableNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(DOLLAR);
			setState(137);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamOptionalValueContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(ScssParser.COLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ParamOptionalValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramOptionalValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParamOptionalValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParamOptionalValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitParamOptionalValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamOptionalValueContext paramOptionalValue() throws RecognitionException {
		ParamOptionalValueContext _localctx = new ParamOptionalValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramOptionalValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(COLON);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140);
				expression();
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << NULL) | (1L << INTERPOLATION_START) | (1L << URL_BEG) | (1L << STRING) | (1L << COLOR) | (1L << IDENTIFIER) | (1L << DOLLAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MixinDeclarationContext extends ParserRuleContext {
		public TerminalNode MIXIN() { return getToken(ScssParser.MIXIN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScssParser.IDENTIFIER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public MixinDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixinDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterMixinDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitMixinDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitMixinDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MixinDeclarationContext mixinDeclaration() throws RecognitionException {
		MixinDeclarationContext _localctx = new MixinDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mixinDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(MIXIN);
			setState(146);
			match(IDENTIFIER);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(147);
				match(LPAREN);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DOLLAR) {
					{
					setState(148);
					params();
					}
				}

				setState(151);
				match(RPAREN);
				}
			}

			setState(154);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeDeclarationContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(ScssParser.INCLUDE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScssParser.IDENTIFIER, 0); }
		public TerminalNode SEMI() { return getToken(ScssParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public IncludeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterIncludeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitIncludeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScssParserVisitor ) return ((ScssParserVisitor<? extends T>)visitor).visitIncludeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeDeclarationContext includeDeclaration() throws RecognitionException {
		IncludeDeclarationContext _localctx = new IncludeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_includeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(INCLUDE);
			setState(157);
			match(IDENTIFIER);
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SEMI:
				{
				setState(158);
				match(SEMI);
				}
				break;
			case EOF:
			case NUMBER:
			case NULL:
			case MIXIN:
			case FUNCTION:
			case AT_IF:
			case AT_FOR:
			case AT_WHILE:
			case AT_EACH:
			case INCLUDE:
			case IMPORT:
			case RETURN:
			case INTERPOLATION_START:
			case URL_BEG:
			case STRING:
			case COLOR:
			case IDENTIFIER:
			case LPAREN:
			case LBRACE:
			case RBRACE:
			case DOT:
			case DOLLAR:
			case AT:
			case AND:
			case HASH:
			case TIMES:
				{
				setState(167);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(159);
					match(LPAREN);
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << NULL) | (1L << INTERPOLATION_START) | (1L << URL_BEG) | (1L << STRING) | (1L << COLOR) | (1L << IDENTIFIER) | (1L << LPAREN) | (1L << DOLLAR))) != 0)) {
						{
						setState(160);
						values();
						}
					}

					setState(163);
					match(RPAREN);
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEMI) {
						{
						setState(164);
						match(SEMI);
						}
					}

					}
					break;
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LBRACE) {
					{
					setState(169);
					block();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ScssParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScssParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(ScssParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ScssParser.RBRACE, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
